--- a/배포.md
+++ b/배포.md
@@ -7,6 +7,29 @@
      git config user.email 'moonseonjong@naver.com'
      git add .
      git commit -m '웨딩 웹페지이 배포'
-     git remote add origin https://github.com/moonjongjs/wedding_.git
+     // 리모트  추가(add 에드) 오리진
+     git remote add origin https://github.com/moonjongjs/wedding2.git
+
+     // 리모트  삭제(remove 리무브) 오리진
+     git remote remove origin
+
+     // 리모트 확인
+     git remote -v
+     origin  https://github.com/moonjongjs/wedding2.git (fetch)
+     origin  https://github.com/moonjongjs/wedding2.git (push)
+
+     // 수정내용 체크 커밋
+     
+
      git push origin master
 ```
+<!-- 배포 저장소(리파지토리) -->
+https://github.com/moonjongjs/wedding2.git
+
+<!-- 
+배포주소 => 아이디.깃허브.io/리파이지토리이름 
+setting => pages => main => save 
+=> 1분이상 기다리고 새로고침 그럼 아래 주소가 보인다. 
+-->
+https://moonjongjs.github.io/wedding_
+https://moonjongjs.github.io/wedding2
